added h1 in side-bar

--- a/bars.html
+++ b/bars.html
@@ -7,6 +7,7 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 <body>
+
 <ul class="top-bar">
     <li><a href="index.html">Mimi's teachables</a></li>
     <li><a href="content/html/index.html">HTML</a></li>
@@ -15,6 +16,7 @@
 </ul>
 
 <ul class="side-bar">
+    <li><h1>CSS</h1></li>
     <li><a href="content/css/index.html">What to use it for</a></li>
     <li><a href="content/css/index.html">Rules, Declarations and Properties</a></li>
     <li><a href="content/css/index.html">Cascading</a></li>
