--- a/index.html
+++ b/index.html
@@ -2,10 +2,50 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link href="style.css" type="text/css" rel="stylesheet" />
+    <title>Mimi Teachables</title>
+    <link href="homepageStyle.css" type="text/css" rel="stylesheet" />
+		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"/>
 </head>
 <body>
+	    <div class='menu-container'>
+      <div class='menu'>
+        <div class='date'></div>
+				  <div class='links'>
+				    <div class='signup'></div>      <!-- This is nested now -->
+				    <div class='login'></div>         <!-- This one too! -->
+				  </div>
+				</div>
+				</div>
+
+			<h1> How to become master in HTML, CSS and Clean Code</h1>
+
+					<!-- <div class='header-container'>
+				  <div class='header'>
+				    <div class='htmlImg'><img class="img1"src='images/html_code.jpg'/></div>
+				    <div class='cssImg'><img class="img2"src='images/css_code.jpg'/></div>
+				  </div>
+				</div> -->
+
+					<div class='photo-grid-container'>
+						  <div class='photo-grid'>
+						    <div class='photo-grid-item first-item'>
+										<a href="index.html" target="_blank"><img src='images/html_code.jpg'/></a>
+											    </div>
+											<div class="overlay">
+												<div class="text">Hello World</div>
+											</div>
+						    <div class='photo-grid-item'>
+										<a href="index.html" target="_blank"><img src='images/css_code.jpg'/></a>
+													    </div>
+						    <div class='photo-grid-item'>
+										<a href="index.html" target="_blank"><img src='images/clean_code.jpg'/></a>
+						    </div>
+						  </div>
+						</div>
+
+					<footer> Created by Samuel, Vince and Yuga</footer>
+
+
 
 <script src="app.js"></script>
 </body>
