--- a/index.html
+++ b/index.html
@@ -7,15 +7,6 @@
 		<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet"/>
 </head>
 <body>
-	    <div class='menu-container'>
-      <div class='menu'>
-        <div class='date'></div>
-				  <div class='links'>
-				    <div class='signup'></div>      <!-- This is nested now -->
-				    <div class='login'></div>         <!-- This one too! -->
-				  </div>
-				</div>
-				</div>
 
 			<h1> How to become master in HTML, CSS and Clean Code</h1>
 
@@ -29,16 +20,16 @@
 					<div class='photo-grid-container'>
 						  <div class='photo-grid'>
 						    <div class='photo-grid-item first-item'>
-										<a href="index.html" target="_blank"><img src='images/html_code.jpg'/></a>
+												<h3>HTML</h3>
+										<a href="index.html" target="_blank"><img src='images/html_code.jpg' title="learn more about html - click here"/></a>
 											    </div>
-											<div class="overlay">
-												<div class="text">Hello World</div>
-											</div>
 						    <div class='photo-grid-item'>
-										<a href="index.html" target="_blank"><img src='images/css_code.jpg'/></a>
+													<h3>CSS</h3>
+										<a href="index.html" target="_blank"><img src='images/css_code.jpg' title="learn more about CSS - click here"/></a>
 													    </div>
 						    <div class='photo-grid-item'>
-										<a href="index.html" target="_blank"><img src='images/clean_code.jpg'/></a>
+													<h3>Clean code</h3>
+										<a href="index.html" target="_blank"><img src='images/clean_code.jpg' title="learn more about clean code - click here"/></a>
 						    </div>
 						  </div>
 						</div>
