added app.js to add bars to every site

--- a/content/clean_code/1.html
+++ b/content/clean_code/1.html
@@ -9,32 +9,19 @@
 </head>
 <body>
 
-  <ul class="top-bar">
-      <li><a href="index.html">Mimi's teachables</a></li>
-      <li><a href="../html/1.html">HTML</a></li>
-      <li><a href="../css/1.html">CSS</a></li>
-      <li><a href="../clean_code/1.html">CLEAN CODE</a></li>
-  </ul>
-
-<ul class="side-bar">
-    <li><h1>CLEAN CODE</h1></li>
-    <li><a href="../clean_code/1.html">Refactoring</a></li>
-    <li><a href="../clean_code/2.html">DRY, KISS and Separation of concerns</a></li>
-</ul>
-
 <h2><strong>Refactioring</strong> </h2>
 
 <p>Code refactoring is the process of restructuring existing computer code—changing the factoring—without changing its external behavior.
-   Refactoring improves nonfunctional attributes of the software. Advantages include improved code readability and reduced complexity;
-   these can improve source-code maintainability and create a more expressive internal architecture or object model to improve extensibility.
-   Typically, refactoring applies a series of standardised basic micro-refactorings, each of which is (usually) a tiny change in a computer
-   program's source code that either preserves the behaviour of the software, or at least does not modify its conformance to functional requirements.
-   Many development environments provide automated support for performing the mechanical aspects of these basic refactorings.
-   If done extremely well, code refactoring may help software developers discover and fix hidden or dormant bugs or vulnerabilities
-   in the system by simplifying the underlying logic and eliminating unnecessary levels of complexity.
-   If done poorly it may fail the requirement that external functionality not be changed, introduce new bugs, or both.</p>
+    Refactoring improves nonfunctional attributes of the software. Advantages include improved code readability and reduced complexity;
+    these can improve source-code maintainability and create a more expressive internal architecture or object model to improve extensibility.
+    Typically, refactoring applies a series of standardised basic micro-refactorings, each of which is (usually) a tiny change in a computer
+    program's source code that either preserves the behaviour of the software, or at least does not modify its conformance to functional requirements.
+    Many development environments provide automated support for performing the mechanical aspects of these basic refactorings.
+    If done extremely well, code refactoring may help software developers discover and fix hidden or dormant bugs or vulnerabilities
+    in the system by simplifying the underlying logic and eliminating unnecessary levels of complexity.
+    If done poorly it may fail the requirement that external functionality not be changed, introduce new bugs, or both.</p>
 
 
-
+<script src="/howtohtmlcss/app.js"></script>
 </body>
 </html>
