--- a/content/clean_code/2.html
+++ b/content/clean_code/2.html
@@ -8,21 +8,9 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 <body>
-
-<ul class="top-bar">
-    <li><a href="index.html">Mimi's teachables</a></li>
-    <li><a href="../html/1.html">HTML</a></li>
-    <li><a href="../css/1.html">CSS</a></li>
-    <li><a href="../clean_code/1.html">CLEAN CODE</a></li>
-</ul>
-
-<ul class="side-bar">
-    <li><h1>CLEAN CODE</h1></li>
-    <li><a href="../clean_code/1.html">Refactoring</a></li>
-    <li><a href="../clean_code/2.html">DRY, KISS and Separation of concerns</a></li>
-</ul>
 <h2>DRY, KISS and Separation of concerns</h2>
 
+<script src="/howtohtmlcss/app.js"></script>
 </body>
 </html>
 </html>
