put all content in a main div

--- a/content/html/1.html
+++ b/content/html/1.html
@@ -3,18 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../../css/bars.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 <body>
 
-<h2><strong>What to us it for</strong></h2>
+<div class="main">
+    <h2><strong>What to us it for</strong></h2>
 
-<p>Hypertext Markup Language (HTML) is the standard markup language for creating web pages and web applications.
-    Web browsers receive HTML documents from a web server or from local storage and render the documents into multimedia web pages.
-    HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.</p>
+    <p>Hypertext Markup Language (HTML) is the standard markup language for creating web pages and web applications.
+        Web browsers receive HTML documents from a web server or from local storage and render the documents into multimedia web pages.
+        HTML describes the structure of a web page semantically and originally included cues for the appearance of the document.</p>
+</div>
 
-<script src="/howtohtmlcss/app.js"></script>
+<script src="/app.js"></script>
 </body>
 </html>
