--- a/index.html
+++ b/index.html
@@ -8,43 +8,43 @@
 	<link href="css/style.css" type="text/css" rel="stylesheet" />
 </head>
 <body>
+<div class="main">
 
-<h1> How to become master in HTML, CSS and Clean Code</h1>
+	<h1> How to become master in HTML, CSS and Clean Code</h1>
 
-<!-- <div class='header-container'>
-<div class='header'>
-<div class='htmlImg'><img class="img1"src='images/html_code.jpg'/></div>
-<div class='cssImg'><img class="img2"src='images/css_code.jpg'/></div>
-</div>
-</div> -->
+	<!-- <div class='header-container'>
+    <div class='header'>
+    <div class='htmlImg'><img class="img1"src='images/html_code.jpg'/></div>
+    <div class='cssImg'><img class="img2"src='images/css_code.jpg'/></div>
+    </div>
+    </div> -->
 
-<div class='photo-grid-container'>
-	<div class='photo-grid'>
-		<div class='photo-grid-item first-item'>
-			<h3>HTML</h3>
-			<a href="/howtohtmlcss/content/html/1.html">
-				<img src='images/html_code.jpg' title="learn more about html - click here"/>
-			</a>
-		</div>
-		<div class='photo-grid-item'>
-			<h3>CSS</h3>
-			<a href="/howtohtmlcss/content/css/1.html">
-				<img src='images/css_code.jpg' title="learn more about CSS - click here"/>
-			</a>
-		</div>
-		<div class='photo-grid-item'>
-			<h3>Clean code</h3>
-			<a href="/howtohtmlcss/content/clean_code/1.html">
-				<img src='images/clean_code.jpg' title="learn more about clean code - click here"/>
-			</a>
+	<div class='photo-grid-container'>
+		<div class='photo-grid'>
+			<div class='photo-grid-item first-item'>
+				<h3>HTML</h3>
+				<a href="/content/html/1.html">
+					<img src='images/html_code.jpg' title="learn more about html - click here"/>
+				</a>
+			</div>
+			<div class='photo-grid-item'>
+				<h3>CSS</h3>
+				<a href="/content/css/1.html">
+					<img src='images/css_code.jpg' title="learn more about CSS - click here"/>
+				</a>
+			</div>
+			<div class='photo-grid-item'>
+				<h3>Clean code</h3>
+				<a href="/content/clean_code/1.html">
+					<img src='images/clean_code.jpg' title="learn more about clean code - click here"/>
+				</a>
+			</div>
 		</div>
 	</div>
+
+	<footer> Created by Samuel, Vince and Yuga</footer>
 </div>
 
-<footer> Created by Samuel, Vince and Yuga</footer>
-
-
-
-<script src="/howtohtmlcss/app.js"></script>
+<script src="/app.js"></script>
 </body>
 </html>
