--- a/content/clean_code/2.html
+++ b/content/clean_code/2.html
@@ -3,14 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../../css/bars.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 <body>
-<h2>DRY, KISS and Separation of concerns</h2>
-
-<script src="/howtohtmlcss/app.js"></script>
+<div class="main">
+    <h2>DRY, KISS and Separation of concerns</h2>
+</div>
+<script src="/app.js"></script>
 </body>
 </html>
 </html>
