--- a/content/html/2.html
+++ b/content/html/2.html
@@ -3,26 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../../css/bars.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 <body>
 
-<h2><strong> Tags & Attributes</strong></h2>
+<div class="main">
+    <h2><strong> Tags & Attributes</strong></h2>
 
-<h3>Tags</h3>
-<p>Tags are elements of the HTML document used to specify how the document should be displayed by the browser.
-    In HTML, each tag has its own specific meaning, which is (in general) common across all different browsers.
-    In fact, you may think of this tutorial as an introduction to the tags that are commonly used in writing HTML.</p>
+    <h3>Tags</h3>
+    <p>Tags are elements of the HTML document used to specify how the document should be displayed by the browser.
+        In HTML, each tag has its own specific meaning, which is (in general) common across all different browsers.
+        In fact, you may think of this tutorial as an introduction to the tags that are commonly used in writing HTML.</p>
 
-<h3>Attributes</h3>
-<p>Attributes are associated with each tag to further define the tags.
-    The general syntax is as follows:</p>
-<ul>
-    <li>tag attribute 1 = "value" attribute 2 = "value" ...</li>
-</ul>
-
-<script src="/howtohtmlcss/app.js"></script>
+    <h3>Attributes</h3>
+    <p>Attributes are associated with each tag to further define the tags.
+        The general syntax is as follows:</p>
+    <ul>
+        <li>tag attribute 1 = "value" attribute 2 = "value" ...</li>
+    </ul>
+</div>
+<script src="app.js"></script>
 </body>
 </html>
