added a missing caracter

--- a/content/html/2.html
+++ b/content/html/2.html
@@ -24,6 +24,6 @@
         <li>tag attribute 1 = "value" attribute 2 = "value" ...</li>
     </ul>
 </div>
-<script src="app.js"></script>
+<script src="/app.js"></script>
 </body>
 </html>
