--- a/content/clean_code/2.html
+++ b/content/clean_code/2.html
@@ -21,7 +21,25 @@
     <li><a href="../clean_code/1.html">Refactoring</a></li>
     <li><a href="../clean_code/2.html">DRY, KISS and Separation of concerns</a></li>
 </ul>
+<div class="">
+
+
 <h2>DRY, KISS and Separation of concerns</h2>
+
+  <p>There are various acronyms and terms that developers use which might seem confusing at first but are good to stick to.
+  More notable ones are:</p>
+  <ul>
+    <li>DRY (Don’t Repeat Yourself)-DRY refers to code writing methodology.
+      DRY usually refers to code duplication.
+      If we write the same logic more than once, we should “DRY up our code.”</li>
+    <li>KISS (Keep It Simple Stupid) - Keeping it simple surpsingly hard.
+      Usually when someone tries to over-engineer a soluiton to a problem.
+      For example an Architect suggests creating a Microservice framework for a simple website.
+      The Engineer will then say: “Let’s KISS it and do something simpler”.</li>
+    <li>Separation of concerns - Another something we need to keep reminder ourselves is to do just one thing.
+      As developers we apparently want to “do all the things” with every function, class or object we create.</li>
+  </ul>
+</div>
 
 </body>
 </html>
