fixed links and files

--- a/content/css/5.html
+++ b/content/css/5.html
@@ -3,27 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../../css/bars.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 <body>
-
-  <ul class="top-bar">
-      <li><a href="index.html">Mimi's teachables</a></li>
-      <li><a href="../html/1.html">HTML</a></li>
-      <li><a href="../css/1.html">CSS</a></li>
-      <li><a href="../clean_code/1.html">CLEAN CODE</a></li>
-  </ul>
-
-  <ul class="side-bar">
-      <li><h1>CSS</h1></li>
-      <li><a href="../css/1.html">What to use it for</a></li>
-      <li><a href="../css/2.html">Rules, Declarations and Properties</a></li>
-      <li><a href="../css/3.html">Cascading</a></li>
-      <li><a href="../css/4.html">Box Model, margins, borders and paddings</a></li>
-      <li><a href="../css/5.html">FlexBox</a></li>
-  </ul>
 
 <h2><strong>FlexBox</strong> </h2>
 
@@ -35,5 +19,6 @@
 
 
 
+<script src="/app.js"></script>
 </body>
 </html>
