--- a/content/css/4.html
+++ b/content/css/4.html
@@ -8,22 +8,24 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 <body>
+<div class="main">
+    <h2><strong>Box Model, margins, borders and paddings</strong> </h2>
 
-<h2><strong>Box Model, margins, borders and paddings</strong> </h2>
+    <ul>
+        <li>CSS Basic Box Model is a module of CSS that defines the rectangular boxes—including
+            their padding and margin—that are generated for elements and laid out according to the
+            visual formatting model.</li>
+        <li>The margin CSS property sets the margin area on all four sides of an element.
+            It is a shorthand for setting all individual margins at once: margin-top, margin-right,
+            margin-bottom, and margin-left.</li>
+        <li>The border CSS property is a shorthand for setting all individual border property values
+            in a single declaration: border-width, border-style, and border-color.</li>
+        <li>The padding CSS property sets the padding area on all four sides of an element.
+            It is a shorthand for setting all individual paddings at once: padding-top, padding-right,
+            padding-bottom, and padding-left.</li>
+    </ul>
+</div>
 
-<ul>
-    <li>CSS Basic Box Model is a module of CSS that defines the rectangular boxes—including
-        their padding and margin—that are generated for elements and laid out according to the
-        visual formatting model.</li>
-    <li>The margin CSS property sets the margin area on all four sides of an element.
-        It is a shorthand for setting all individual margins at once: margin-top, margin-right,
-        margin-bottom, and margin-left.</li>
-    <li>The border CSS property is a shorthand for setting all individual border property values
-        in a single declaration: border-width, border-style, and border-color.</li>
-    <li>The padding CSS property sets the padding area on all four sides of an element.
-        It is a shorthand for setting all individual paddings at once: padding-top, padding-right,
-        padding-bottom, and padding-left.</li>
-</ul>
 
 <script src="/app.js"></script>
 </body>
