--- a/content/css/5.html
+++ b/content/css/5.html
@@ -8,14 +8,17 @@
     <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 </head>
 <body>
+<div class="main">
 
-<h2><strong>FlexBox</strong> </h2>
+    <h2><strong>FlexBox</strong> </h2>
 
-<p>The Flexible Box Module, usually referred to as flexbox, was designed as a one-dimensional layout model,
-   and as a method that could offer space distribution between items in an interface and powerful alignment capabilities.
-   When we describe flexbox as being one dimensional we are describing the fact that flexbox deals with layout in one
-   dimension at a time — either as a row or as a column. This can be contrasted with the two-dimensional model of CSS
-   Grid Layout, which controls columns and rows together.</p>
+    <p>The Flexible Box Module, usually referred to as flexbox, was designed as a one-dimensional layout model,
+        and as a method that could offer space distribution between items in an interface and powerful alignment capabilities.
+        When we describe flexbox as being one dimensional we are describing the fact that flexbox deals with layout in one
+        dimension at a time — either as a row or as a column. This can be contrasted with the two-dimensional model of CSS
+        Grid Layout, which controls columns and rows together.</p>
+
+</div>
 
 
 
